Services/vproapp-loadbal.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloworld-service
spec:
  type: LoadBalancer
  ports:
    - targetPort: 8080
      port: 80
      protocol: TCP
  selector:
        app: vproapp
