Services/vproapp-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloworld-service
spec:
  type: NodePort
  ports:
    # container port
    - targetPort: 8080
    # internal front-end port
      port: 8090
    # extenal frontend port
      nodePort: 30001
      protocol: TCP
  selector:
        app: vproapp
